--- a/1.html
+++ b/1.html
@@ -3,15 +3,27 @@
   <head>
     <title>나라말샘의 한국어 감상실- 새 말</title>
     <meta charset="utf-8">
+      <link rel="stylesheet" href="style.css">
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+      <script src="colors.js"></script>
   </head>
 
   <body>
-    <h1><a href="index.html">나라말샘의 한국어 감상실</a></h1>
-    <ol>
-      <li><a href="1.html">새 말</a></li>
-      <li><a href="2.html">꾼 말</a></li>
-      <li><a href="3.html">오랜 말</a></li>
-      <li><a href="4.html">나라말샘</a></li>
-    </ol>
-    <h2> 들으면서 배우는 한국어, 새 말- 신조어 </h2>
+    <h1><a href="index.html"style="color:SteelBlue">나라말샘의 한국어 감상실</a></h1>
+    <input type="button" value="어둡게" onclick="
+      nightDayHandler(this);
+    ">
+      <div id="grid">
+        <ol>
+          <li><a href="1.html"id="active">새 말</a></li>
+          <li><a href="2.html">꾼 말</a></li>
+          <li><a href="3.html">오랜 말</a></li>
+          <li><a href="4.html">나라말샘</a></li>
+        </ol>
+        <div id="article">
+          <h2> 들으면서 배우는 한국어, 새 말- 신조어 </h2>
+          <p> 한국어 계의 &quot;신상&quot; 신조어, 새로 생긴 말들에 대해 정리하고 그 뜻을 알아 봅시다.
+          </p>
+        </div>
+      </div>
   </body>
