--- a/4.html
+++ b/4.html
@@ -3,17 +3,29 @@
   <head>
     <title>나라말샘의 한국어 감상실- 나라말샘</title>
     <meta charset="utf-8">
+        <link rel="stylesheet" href="style.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="colors.js"></script>
   </head>
 
   <body>
-    <h1><a href="index.html">나라말샘의 한국어 감상실</a></h1>
-    <ol>
-      <li><a href="1.html">새 말</a></li>
-      <li><a href="2.html">꾼 말</a></li>
-      <li><a href="3.html">오랜 말</a></li>
-      <li><a href="4.html">나라말샘</a></li>
-    </ol>
-    <h2> 나라말샘 </h2>
-    <img width="50%" src="page.png">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/GQZTsz9JfeU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <h1><a href="index.html"style="color:SteelBlue">나라말샘의 한국어 감상실</a></h1>
+    <input type="button" value="어둡게" onclick="
+      nightDayHandler(this);
+    ">
+    <div id="grid">
+      <ol>
+        <li><a href="1.html">새 말</a></li>
+        <li><a href="2.html">꾼 말</a></li>
+        <li><a href="3.html">오랜 말</a></li>
+        <li><a href="4.html"id="active">나라말샘</a></li>
+      </ol>
+      <div id="article">
+        <h2> 나라말샘 </h2>
+        <p>나라말샘을 소개합니다.
+        </p>
+        <img width="560px" src="page.png">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/GQZTsz9JfeU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+    </div>
   </body>
